--- a/front-end/src/App.css
+++ b/front-end/src/App.css
@@ -1,38 +1,12 @@
-.App {
-  text-align: center;
+* {
+    background-color: rgb(92, 139, 92);
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.center {
+    border-radius: 20px;
+    margin: auto;
+    width: 50%;
+    background-color: lightblue;
+    height: 100vh;
+    box-shadow: 1px 1px 8px;
 }
