--- a/front-end/src/components/FuelQuoteHistoryTable.css
+++ b/front-end/src/components/FuelQuoteHistoryTable.css
@@ -1,3 +1,5 @@
-table, th, td {
-    border: 1px solid black;
+table, td, th {
+    border-radius: 3px;
+    border: 1px solid green;
+    background-color: gainsboro;
 }
