--- a/front-end/src/components/Navigation/MainHeader.css
+++ b/front-end/src/components/Navigation/MainHeader.css
@@ -6,7 +6,7 @@
     position: fixed;
     top: 0;
     left: 0;
-    background: lightcoral;
+    background-color: rgb(121, 143, 240);
     box-shadow: 0 2px 6px rgba(0, 0, 0, .3);
     padding: 0 1rem;
     z-index: 5;
