--- a/front-end/src/components/Navigation/NavBar.css
+++ b/front-end/src/components/Navigation/NavBar.css
@@ -24,7 +24,7 @@
 .nav-title a {
   text-decoration: none;
   color: white;
-  background-color: lightcoral;
+  background-color: rgb(121, 143, 240);
 }
 
 .main-navigation__header-nav {
