--- a/front-end/src/components/FuelQuoteHistoryTable.css
+++ b/front-end/src/components/FuelQuoteHistoryTable.css
@@ -3,3 +3,12 @@ table, td, th {
     border: 1px solid green;
     background-color: gainsboro;
 }
+
+.the-table{
+    text-align: center;
+    margin: auto;
+}
+
+.table-body{
+    text-align: center;
+}
