--- a/front-end/src/pages/Login.css
+++ b/front-end/src/pages/Login.css
@@ -7,7 +7,7 @@
     overflow: hidden;
 }
 .Register{
-    margin: 30px 0;
+    margin: 20px 0;
     text-align: center;
     font-size: 16px;
 }
@@ -24,7 +24,7 @@
     background: rgb(255, 255, 255);
     box-shadow: 10px 10px 10px rgb(134, 130, 132);
     border-radius: 25px;
-    opacity: 85%;
+    opacity: 95%;
 }
 .centerPosition h1{
     text-align: center;
@@ -65,6 +65,7 @@ transform: translateY(30%);
     border-radius: 25px;
     background-color: #0485fd;
     cursor: pointer;
+    margin-bottom: 20px;
 }
 .loginButton:hover{
     border-color: #6dce95;
