--- a/front-end/src/components/Navigation/NavBar.css
+++ b/front-end/src/components/Navigation/NavBar.css
@@ -25,8 +25,20 @@
   text-decoration: none;
   color: white;
   background-color: rgb(121, 143, 240);
+  padding: 0 27rem;
 }
 
 .main-navigation__header-nav {
   display: none;
+}
+
+.logout-button {
+  width: 100%;
+  height: 40px;
+  font-size: 15px;
+  color: white;
+  margin-right: 5px;
+  border-radius: 25px;
+  background-color: #0485fd;
+  cursor: pointer;
 }
